--- a/src/gex-app.html
+++ b/src/gex-app.html
@@ -66,7 +66,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         /* paper-input */
         --paper-input-container-focus-color: var(--accent-color);
         --paper-input-container-invalid-color: red;
-        --paper-input-container-color: var(--primary-text-color);  
+        --paper-input-container-color: var(--secondary-text-color);  
         --paper-input-container-input-color: var(--primary-text-color);  
 
         --paper-progress-active-color: var(--accent-color);
