--- a/src/gex-app.html
+++ b/src/gex-app.html
@@ -96,6 +96,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         flex-direction: column;
         height: 100%;
         background-color: var(--dark-primary-color);
+        overflow: hidden;
       }
 
       .toolbar-login-actions {
