--- a/src/pacs-pull/gex-pacs-query.html
+++ b/src/pacs-pull/gex-pacs-query.html
@@ -23,10 +23,10 @@
 
       .container {
         display: flex;
-        flex-direction: column;
+        /* flex-direction: column; */
         width: 840px;
-        margin-left: auto;
-        margin-right: auto;
+        align-items: center;
+        justify-content: center;
       }
 
       .content {
