--- a/src/pacs-pull/gex-pacs-settings-dialog.html
+++ b/src/pacs-pull/gex-pacs-settings-dialog.html
@@ -21,6 +21,10 @@
         margin-right: auto;
       }
 
+      paper-button {
+        color: var(--text-primary-color);
+      }
+
       @media (max-width: 640px) {
         .content {
           width: 100%;
