--- a/src/gex-login.html
+++ b/src/gex-login.html
@@ -7,6 +7,7 @@
 
 <link rel="import" href="shared-styles.html">
 
+<link rel="import" href="./elements/ra-logo.html">
 <link rel="import" href="../bower_components/chips-api/chips-api.html">
 
 <dom-module id="gex-login">
@@ -89,7 +90,9 @@
       <div class="horizontal-section">
 
         <section>
-          <div class="title">GE Xplorer</div>
+          <div class="title">
+            <ra-logo size="big"></ra-logo>
+            Radiology Viewer</div>
         </section>
 
         <section>
