--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       window.ChipsConfiguration = {
         'version': 'v1',
         'api': 'ultron',
-        'apiRoot': 'http://localhost:8000/api/v1', // no trailing /
+        'apiRoot': 'http://173.48.82.253:8050/api/v1', //'http://localhost:8000/api/v1', // no trailing /
       };
     </script>
 
