--- a/src/elements/ami-renderer-annotations.html
+++ b/src/elements/ami-renderer-annotations.html
@@ -81,11 +81,11 @@
       }
 
       #lutColorCanvas {
-        /* transform: rotate(90deg); */
-        transform-origin: left;
-        transform: rotate(90deg) translate(-50%, -50%) ;
-        /* transform-origin: top left; */
-        /* margin: 10px; */
+        transform-origin: left center;
+        transform: rotate(-90deg) translate(-50%, 0);
+        margin-left: 10px;
+        height: 10px;
+        overflow: hidden;
       }
     </style>
 
