--- a/src/elements/series-preview.html
+++ b/src/elements/series-preview.html
@@ -1,5 +1,10 @@
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
 
+<link rel="import" href="../../bower_components/moment-element/moment-element.html">
+
+<!-- Ra elements -->
+<link rel="import" href="./series-layout-location.html">
+
 <dom-module id="series-preview">
   <template>
 
@@ -16,16 +21,10 @@
       }
 
       .seriesPreview {
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-            -ms-flex-direction: column;
-                flex-direction: column;
-        margin: 4px;
-        padding: 4px;
+        /* margin: 4px;
+        padding: 4px; */
         border: 1px solid rgba(0, 0, 0, 0);
+        position: relative;
       }
 
       .seriesPreview:hover {
@@ -37,6 +36,18 @@
         border-color: var(--accent-color);
       }
 
+      .overlay {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background: var(--accent-color);
+        opacity: .5;
+        z-index: 1;
+        pointer-events: none;
+      }
+
       img {
         min-width: 128px;
         min-height: 128px;
@@ -44,41 +55,80 @@
       }
 
       .about {
-        /*position: absolute;
-        bottom: 0;
-        left:0;
-        right: 0;*/
-        padding: 2px;
-        -webkit-box-flex: 1;
-            -ms-flex: 1;
-                flex: 1;
-        min-width: 0;
         font-size: 12px;
-        color: var(--secondary-text-color);
+        color: var(--primary-text-color);
+        position: absolute;
+        pointer-events: none;
+        background-color: #212121;
+        opacity: .7;
+        /* z-index: 2; */
       }
 
-      .about > div {
+      .about.description{
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        margin: auto;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        text-align: center;
+        font-weight: normal;
+        padding: 2px;
+        z-index: 2;
+      }
+
+      .about.date {
+        bottom: 0px;
+        right: 4px;
+        font-size: 11px
+      }
+
+      .about.files {
+        bottom: 0px;
+        left: 4px;
+        font-size: 11px;
+      }
+
+      .about {
         white-space: nowrap;
         overflow: hidden;
         -o-text-overflow: ellipsis;
            text-overflow: ellipsis;
       }
 
+      series-layout-location {
+        position: absolute;
+        top: 2px;
+        right: 2px;
+        z-index: 2;
+      }
+
+      [hidden] {
+        display: none;
+      }
+
     </style>
 
-    <div class="seriesPreview"
-      selected$="[[series.selected]]">
+    <div class="seriesPreview">
+      <div hidden$={{!_seriesActive(active,layout,series)}} class="overlay">
+      </div>
       <div class="previewContainer">
         <img
           id="image"
           on-mousemove='onMove'
           on-mouseout='centerThumbnail'>
       </div>
-      <div class="about">
-        <div class="description">[[series.details.series.description]]</div>
-        <div class="date">[[series.details.series.date]]</div>
-        <div class="files">[[series.details.series.files]]</div>
-      </div>
+      <series-layout-location
+        hidden$="{{!_seriesInLayout(layout, series, tick)}}"
+        layout="[[layout]]"
+        series-uid="[[series.details.series.uid]]"
+        size="18"></series-layout-location>
+      <!-- <div class="about"> -->
+        <div class="about description">[[series.details.series.description]]</div>
+        <div class="about date"><moment-element datetime="[[series.details.series.date]]" output-format="MMM DD[,] YYYY"></moment-element></div>
+        <div class="about files">[[series.details.series.files]] images</div>
+      <!-- </div> -->
     </div>
 
   </template>
@@ -91,9 +141,21 @@
 
       static get properties() {
         return {
+          active: {
+            type: Number,
+            observer: '_activeChanged',
+          },
+          layout: {
+            type: Array,
+            value: [-1],
+          },
           series: {
             type: Object,
             observer: '_seriesChanged',
+          },
+          tick: {
+            type: Boolean,
+            value: true,
           },
         };
       }
@@ -101,6 +163,7 @@
       static get observers() {
         return [
             // path seems incorrect...
+            '_layoutChanged(layout.*)',
             '_previewBlobChanged(series.preview.blob)',
           ];
       }
@@ -143,6 +206,47 @@
           this.$.image.onload = this.centerThumbnail.bind(this);
           this.$.image.src = url;
         }
+      }
+
+      _layoutChanged(layout) {
+        console.log(layout);
+        this.tick = !this.tick;
+      }
+
+      _activeChanged(active) {
+        console.log(active);
+      }
+
+      _seriesActive(activeWindow, layout, series) {
+        if (
+          activeWindow === undefined ||
+          layout === undefined ||
+          series === undefined) {
+          return false;
+        }
+        const seriesUid = series.details.series.uid;
+        const activeUid = layout[activeWindow];
+
+        return seriesUid === activeUid;
+      }
+
+      _seriesInLayout(layout, series, tick) {
+        console.log(layout, series);
+        if (
+          layout === undefined ||
+          series === undefined) {
+          return false;
+        }
+
+        const seriesUid = series.details.series.uid;
+        for (let i = 0; i<layout.length; i++) {
+          if (layout[i] === seriesUid) {
+            console.log(layout[i]);
+            console.log(seriesUid);
+            return true;
+          }
+        }
+        return false;
       }
     }
     window.customElements.define(SeriesPreview.is, SeriesPreview);
